Fix content overflow on mobile devices *

--- a/app/assets/css/auth.css
+++ b/app/assets/css/auth.css
@@ -4,7 +4,7 @@
 
 .auth-box {
   flex: 1;
-  width: auto;
+  width: 100%;
   margin-inline: auto;
   max-width: 400px;
   display: flex;
@@ -14,8 +14,9 @@
   padding-block: 0.5rem;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (width <= 500px) {
   .auth-box {
+    width: auto;
     margin-inline: 0.5rem;
   }
 }
